# vector-db

./: .gitignore  app.py  commands.txt  main.py  pyproject.toml
document_processors/: markdown.py  schemas.py
documents/markdown/: commands.md
embedders/: i_embedder.py  openai.py
pinecone_manager/: pinecone.py  pinecone_uploader.py
src/application/: app.py
src/domain/repositories/vector_db/: i_vector_db.py  schemas.py
src/domain/services/document_processor/: i_processor.py
src/domain/services/embedder/: i_embedder.py
src/infrastructure/adapters/: markdown.py
src/infrastructure/external_services/: openai_embedder.py
src/infrastructure/persistance/: pinecone.py
use_cases/: app.py
