[project]
name = "pinecone-search"
version = "0.1.0"
description = ""
authors = [
    {name = "ylich",email = "vyboluarte@minsait.com"}
]

requires-python = "=3.11.7"
dependencies = [
    "pinecone (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.107.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "markdown-it-py (>=4.0.0,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
